Change Security to interface to provide correct support for injection.
Signed-off-by: Tomas Langer <tomas.langer@oracle.com>